src/objects/Escalation__c.object
<CustomObject>
    <description>This is an Escalation object with the following design attributes:

- An Escalation object has a Case as a parent.
- A Case can have multiple Escalation objects as children.
- Each instance of an Escalation object represents a separate escalation of a Case.
- Each Escalation object has its own escalated and de-escalated dates.
- A Case could be escalated multiple times (such as for a problem that reoccurs), and therefore would have multiple Escalation objects.</description>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>This is the Case Number of the parent Case for this Escalation object.</description>
        <inlineHelpText>This is the Case Number of the parent Case for this Escalation object.</inlineHelpText>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Created Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>De_escalated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>De-escalated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>De_escalated_Timestamp__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>De-escalated Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>De_escalation_Criteria__c</fullName>
        <label>De-escalation Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Escalated__c</fullName>
        <label>Reason Escalated</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Escalation</label>
    <nameField>
        <displayFormat>ESC-{00000}</displayFormat>
        <label>Escalation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>